--- a/.github/workflows/webscan.yml
+++ b/.github/workflows/webscan.yml
@@ -1,17 +1,41 @@
-#workflow_dispatch: # this adds a run button
-# Steps represent a sequence of tasks that will be executed as part of the job
-steps:
+name: Checkmarx Scan
+
+# Controls when the workflow will run
+on:
+  pull_request:
+    types: [opened, reopened, synchronize]
+    branches: [ "main" ]
+  push: 
+      branches:
+      - main
+  workflow_dispatch: # *** this adds a run button ***
+
+permissions:
+  contents: read
+
+# A workflow run is made up of one or more jobs that can run sequentially or in parallel
+jobs:
+  # This workflow contains a single job called "build"
+  build:
+    permissions:
+      contents: read # for actions/checkout to fetch code
+      security-events: write # for github/codeql-action/upload-sarif to upload SARIF results
+      actions: read # only required for a private repository by github/codeql-action/upload-sarif
+    # The type of runner that the job will run on
+    runs-on: ubuntu-latest
+    # Steps represent a sequence of tasks that will be executed as part of the job
+    steps:
     # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
     - uses: actions/checkout@v3
     # Scan
     - name: Checkmarx DAST Github Action
       uses: Checkmarx/dast-github-action@v1.0.0-beta
       env:
-        CX_APIKEY: ${{ secrets.CX_ONE_API_KEY }}
+        CX_APIKEY: ${{ secrets.CANARY_API_KEY }}
       with:
         command: "web"
-        config: 'zap_config.yaml'
-        base_url: "localhost.cxast.net"
-        environment_id: "c608a51a-ec4e-4eef-81c4-a0241737efd7"
+        config: 'security_tweets.yaml'
+        base_url: "http://testhtml5.vulnweb.com"
+        environment_id: "fd6ea573-a228-47e1-b5f8-573525251bc0"
         fail_on: "HIGH"
         verbose: true
