--- a/.github/workflows/webscan.yml
+++ b/.github/workflows/webscan.yml
@@ -31,7 +31,7 @@ jobs:
     - name: Checkmarx DAST Github Action
       uses: Checkmarx/dast-github-action@v1.0.0-beta
       env:
-        CX_APIKEY: ${{ secrets.CANARY_API_KEY }}
+        CX_APIKEY: ${{ secrets.CX_APIKEY }}
       with:
         command: "web"
         config: 'security_tweets.yaml'
