--- a/.github/workflows/security_tweets.yaml
+++ b/.github/workflows/security_tweets.yaml
@@ -32,7 +32,7 @@ env:
             password: "admin"
             username: "admin"
   parameters:
-    failOnError: true
+    failOnError: false
     failOnWarning: false
     progressToStdout: true
   vars: {}
