--- a/.github/workflows/webscan.yaml
+++ b/.github/workflows/webscan.yaml
@@ -2,12 +2,12 @@ name: allengayCx Security Tweets
 
 # Controls when the workflow will run
 on:
-  pull_request:
-    types: [opened, reopened, synchronize]
-    branches: [ "main" ]
-  push: 
-      branches:
-      - main
+  #pull_request:
+  #  types: [opened, reopened, synchronize]
+  #  branches: [ "main" ]
+  #push: 
+  #    branches:
+  #    - main
   workflow_dispatch: # *** this adds a run button ***
 
 permissions:
@@ -34,8 +34,8 @@ jobs:
         CX_APIKEY: ${{ secrets.CX_APIKEY }}
       with:
         command: "web"
-        config: 'security_tweets.yaml'
-        base_url: "http://testhtml5.vulnweb.com"
+        config: './security_tweets.yaml'
+        base_url: "https://deu.ast.checkmarx.net"
         environment_id: "fd6ea573-a228-47e1-b5f8-573525251bc0"
         fail_on: "HIGH"
         verbose: true
