--- a/.github/workflows/webscan.yaml
+++ b/.github/workflows/webscan.yaml
@@ -39,3 +39,9 @@ jobs:
         environment_id: "fd6ea573-a228-47e1-b5f8-573525251bc0"
         fail_on: "HIGH"
         verbose: true
+        output: ./output
+    - uses: actions/upload-artifact@v3
+      name: Upload Logs
+      with: 
+        name: report
+        path: ./output
