--- a/.github/workflows/dast.yaml
+++ b/.github/workflows/dast.yaml
@@ -41,7 +41,9 @@ jobs:
         verbose: true
         output: ./output
     - uses: actions/upload-artifact@v3
+      if: always()
       name: Upload Logs
       with:
         name: report
         path: ./output
+        
