--- a/.github/workflows/dast.yaml
+++ b/.github/workflows/dast.yaml
@@ -40,6 +40,9 @@ jobs:
         fail_on: "HIGH"
         verbose: true
         output: ./output
+    - name: Reclaim output directory  
+      if: always()  
+      run: sudo chown -R 1001:1001 ${{ github.workspace }}/output
     - uses: actions/upload-artifact@v3
       if: always()
       name: Upload Logs
