--- a/.github/workflows/security_tweets_dast_scan.yaml
+++ b/.github/workflows/security_tweets_dast_scan.yaml
@@ -29,7 +29,7 @@ jobs:
     - uses: actions/checkout@v3
     # Scan
     - name: Checkmarx DAST Github Action
-      uses: Checkmarx/dast-github-action@v1.0.1-beta
+      uses: Checkmarx/dast-github-action@v1.0.2
       env:
         CX_APIKEY: ${{ secrets.CX_APIKEY }}
       with:
