--- a/gin_juice.yaml
+++ b/gin_juice.yaml
@@ -99,10 +99,17 @@ jobs:
       rules: []
     name: "activeScan"
     type: "activeScan"
+  #- parameters:
+  #    template: "risk-confidence-html"
+  #    reportDir: ""
+  #    reportTitle: "ZAP Scanning Report"
+  #    reportDescription: ""
+  #  name: "report"
+  #  type: "report"
   - parameters:
-      template: "risk-confidence-html"
-      reportDir: "C:\\Users\\joaor"
+      template: "traditional-pdf"
+      reportDir: ""
       reportTitle: "ZAP Scanning Report"
       reportDescription: ""
-    name: "report"
+    name: "report-pdf"
     type: "report"
