Update and rename gin_juice_dast_scan to gin_juice_dast_scan.yaml

--- a/.github/workflows/gin_juice_dast_scan.yaml
+++ b/.github/workflows/gin_juice_dast_scan.yaml
@@ -34,9 +34,9 @@ jobs:
         CX_APIKEY: ${{ secrets.CX_APIKEY }}
       with:
         command: "api"
-        config: './security_tweets.yaml'
+        openapi: './gin_juice.yaml'
         base_url: "https://deu.ast.checkmarx.net"
-        environment_id: "fd6ea573-a228-47e1-b5f8-573525251bc0"
+        environment_id: "2f776f4a-dfda-46d1-9fda-b879307d9b76"
         fail_on: "HIGH"
         verbose: true
         output: ./output
