--- a/.github/workflows/security_tweets_dast_scan.yaml
+++ b/.github/workflows/security_tweets_dast_scan.yaml
@@ -5,9 +5,9 @@ on:
   #pull_request:
   #  types: [opened, reopened, synchronize]
   #  branches: [ "main" ]
-  #push: 
-  #    branches:
-  #    - main
+  push: 
+      branches:
+      - main
   workflow_dispatch: # *** this adds a run button ***
 
 permissions:
