--- a/.github/workflows/gin_juice_dast_scan.yaml
+++ b/.github/workflows/gin_juice_dast_scan.yaml
@@ -5,9 +5,9 @@ on:
   #pull_request:
   #  types: [opened, reopened, synchronize]
   #  branches: [ "main" ]
-  #push: 
-  #    branches:
-  #    - main
+  push: 
+      branches:
+      - main
   workflow_dispatch: # *** this adds a run button ***
 
 permissions:
@@ -37,8 +37,8 @@ jobs:
         config: './gin_juice.yaml'
         # openapi: file here
         base_url: "https://deu.ast.checkmarx.net"
-        environment_id: "2f776f4a-dfda-46d1-9fda-b879307d9b76"
-        fail_on: "HIGH"
+        environment_id: "91013972-127c-45ad-a270-c9f8d055268a"
+        #fail_on: "HIGH"
         verbose: true
         output: ./output
     - name: Reclaim output directory  
