--- a/.github/workflows/gin_juice_dast_scan.yaml
+++ b/.github/workflows/gin_juice_dast_scan.yaml
@@ -18,7 +18,7 @@ jobs:
   # This workflow contains a single job called "build"
   build:
     permissions:
-      contents: read # for actions/checkout to fetch code
+      contents: read # for actions/checkout to fetch cod
       security-events: write # for github/codeql-action/upload-sarif to upload SARIF results
       actions: read # only required for a private repository by github/codeql-action/upload-sarif
     # The type of runner that the job will run on
