--- a/gin_juice.yaml
+++ b/gin_juice.yaml
@@ -1,7 +1,7 @@
 ---
 env:
   contexts:
-    - name: "GinAndJuice"
+    - name: "GinAndJuic"
       urls:
         - "https://ginandjuice.shop"
       includePaths:
