--- a/.github/workflows/gin_juice_dast_scan.yaml
+++ b/.github/workflows/gin_juice_dast_scan.yaml
@@ -25,7 +25,7 @@ jobs:
     runs-on: ubuntu-latest
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-    # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
+    # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access i
     - uses: actions/checkout@v3
     # Scan
     - name: Checkmarx DAST Github Action
@@ -37,7 +37,7 @@ jobs:
         config: './gin_juice.yaml'
         # openapi: file here
         base_url: "https://deu.ast.checkmarx.net"
-        environment_id: "d336ac41-081b-4670-8b2b-3ef97593d36b"
+        environment_id: "01a07ac0-aaff-43ed-a1a4-4b59066607c7"
         #fail_on: "HIGH"
         verbose: true
         output: ./output
