--- a/.github/workflows/gin_juice_dast_scan.yaml
+++ b/.github/workflows/gin_juice_dast_scan.yaml
@@ -38,7 +38,7 @@ jobs:
         # openapi: file here
         base_url: "https://deu.ast.checkmarx.net"
         environment_id: "d336ac41-081b-4670-8b2b-3ef97593d36b"
-        #fail_on: "HIGH"
+        fail_on: "engine"
         verbose: true
         output: ./output
     - name: Reclaim output directory  
