--- a/.github/workflows/gin_juice_dast_scan.yaml
+++ b/.github/workflows/gin_juice_dast_scan.yaml
@@ -25,7 +25,7 @@ jobs:
     runs-on: ubuntu-latest
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-    # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access i
+    # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access id
     - uses: actions/checkout@v3
     # Scan
     - name: Checkmarx DAST Github Action
