--- a/.github/workflows/security_tweets_dast_scan.yaml
+++ b/.github/workflows/security_tweets_dast_scan.yaml
@@ -35,8 +35,8 @@ jobs:
       with:
         command: "web"
         config: './security_tweets.yaml'
-        base_url: "https://deu.ast.checkmarx.net"
-        environment_id: "91013972-127c-45ad-a270-c9f8d055268a"
+        base_url: "https://sng.ast.checkmarx.net/"
+        environment_id: "d336ac41-081b-4670-8b2b-3ef97593d36b"
         #fail_on: "HIGH"
         verbose: true
         output: ./output
